# IPTVChecker

./: .gitignore  .mcp.json  AGENTS.md  CONTRIBUTING.md  README.md  index.html  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: backend-performance-baseline.md  ui-performance-baseline.md
scripts/: benchmark-ui-filter.ts  clean-fuzz-local.sh  download-ffmpeg.sh
src/: App.tsx  SettingsWindow.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  macos.json
src-tauri/fuzz/: .gitignore  Cargo.toml  README.md
src-tauri/fuzz/corpus/extinf_attributes/: seed_extinf_line.txt
src-tauri/fuzz/corpus/parse_m3u/: seed_valid_playlist.txt
src-tauri/fuzz/fuzz_targets/: extinf_attributes.rs  parse_m3u.rs  playlist_discovery_depth.rs
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: export.rs  history.rs  mod.rs  player.rs  playlist.rs  recent.rs  scan.rs  settings.rs
src-tauri/src/engine/: checker.rs  connectivity.rs  disk.rs  ffmpeg.rs  mod.rs  parser.rs  proxy.rs  resume.rs
src-tauri/src/models/: backend_perf.rs  channel.rs  mod.rs  playlist.rs  scan.rs  scan_history.rs  scan_log.rs  settings.rs
src-tauri/tests/: scan_pipeline_integration.rs
tests/: channelResults.test.ts  duplicates.test.ts  epgCoverage.test.ts  exportScope.test.ts  filters.logic.test.ts  filters.sort.test.ts  format.test.ts  languageDistribution.test.ts  playlistReportVisibility.test.ts  scanErrorEvents.test.ts  tableColumns.test.ts  useScan.helpers.test.ts
(+44 files in other folders)
