[package]
name = "iptv-checker"
version = "0.1.0"
description = "Cross-platform IPTV Stream Checker"
authors = []
edition = "2021"

[lib]
name = "iptv_checker_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["stream", "socks", "cookies"] }
url = "2"
regex = "1"
csv = "1"
futures = "0.3"
thiserror = "2"
rand = "0.10"
tokio-util = { version = "0.7", features = ["rt"] }
log = "0.4"
tauri-plugin-log = "2"
tauri-plugin-liquid-glass = "0.1"
tauri-plugin-os = "2"
window-vibrancy = "0.7"
base64 = "0.22.1"
